--- a/notebooks/Lab2.ipynb
+++ b/notebooks/Lab2.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "# load in data for part 1\n",
-    "table1 = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/master/data/lab2/lab2_immgen.csv')\n",
+    "table1 = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab2/lab2_immgen.csv')\n",
     "table1"
    ]
   },
@@ -53,8 +53,7 @@
    "source": [
     "The data loaded in shows 1000 genes and their mean expression after 6 days of incubation. This expression value is shown in the column labeled 'mean_6d'. \n",
     "\n",
-    "## Question 1\n",
-    "Using the sort() functionality for table, what are the 3 highest expressed genes and their expression values? What are the 3 lowest expressed genes and their expression values?"
+    "First, let's sort the genes by expression. First, we will sort in order of descending expression to find the 3 highest expressed genes."
    ]
   },
   {
@@ -62,6 +61,36 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sort by mean_6d descending then choose top 3\n",
+    "\n",
+    "# First, select the Gene symbol and mean expression columns\n",
+    "expression = table1.select(['Gene_Symbol', 'mean_6d'])\n",
+    "\n",
+    "# Next, sort by mean expression. Set descending to true.\n",
+    "sortedDescending = expression.sort('mean_6d', descending = True)\n",
+    "\n",
+    "# Select the top 3 expressed genes\n",
+    "print(sortedDescending.rows[0], sortedDescending.rows[1], sortedDescending.rows[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we see the highest expressed genes are Cc15, Hist1h3b, and Hist2h3b.\n",
+    "\n",
+    "## Question 1\n",
+    "Using the **sort()** functionality for table, what are the 3 lowest expressed genes and their expression values? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -73,14 +102,14 @@
    "metadata": {},
    "source": [
     "## Question 2\n",
-    "What are the top 3 and lowest 3 fold counts (FC)? Are these the same as the top and lowest genes above? Why or why not?"
+    "Still using the sort() function, find the genes with top 3 and lowest 3 fold counts (FC)? Are these the same as the top and lowest genes expressed above? Why or why not?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -99,11 +128,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Answer here:"
+    "plot_data = table1.select(['mean_naive', 'mean_6d'])\n",
+    "\n",
+    "# Answer here: Plot the plot_data, using the '.scatter' function\n"
    ]
   },
   {
@@ -130,7 +161,9 @@
    "outputs": [],
    "source": [
     "# load in data for part 2\n",
-    "table2 = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/master/data/lab2/immgen_timeseries.csv')\n",
+    "table2 = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab2/immgen_timeseries.csv')\n",
+    "\n",
+    "# Show the table\n",
     "table2"
    ]
   },
@@ -145,14 +178,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Select the expression columns for 0 to 100 days\n",
     "columns = table2.select(['mean_n','mean_12h','mean_24h','mean_48h','mean_6d', 'mean_8d','mean_10d', 'mean_15d', 'mean_45d','mean_100d'])\n",
+    "\n",
+    "# To use kmeans, we must format our data as a matrix. These functions let us extract a matrix of values from our table \n",
+    "# of expression data.\n",
     "matrix = columns.to_df().as_matrix()\n",
     "\n",
+    "# Run kmeans with 10 clusters\n",
     "kmeans = KMeans(n_clusters=10, random_state=0).fit(matrix)\n",
+    "\n",
+    "# Print out the cluster labels. Each label 0-9 represents a different cluster. Genes in the same cluster should have \n",
+    "#'similar' expression patterns. \n",
     "kmeans.labels_"
    ]
   },
@@ -171,21 +212,8 @@
    },
    "outputs": [],
    "source": [
-    "# join labels with dataframe\n",
-    "columns_and_labels = columns.with_column('cluster_id', kmeans.labels_.tolist())\n",
-    "\n",
-    "# filter out labels for each cluster\n",
-    "cluster_0 = columns_and_labels.where('cluster_id', 0).select(['mean_n','mean_12h','mean_24h','mean_48h','mean_6d', 'mean_8d','mean_10d', 'mean_15d', 'mean_45d','mean_100d'])\n",
-    "\n",
-    "cluster_0.plot()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 4\n",
-    "Plot and save clusters 2, 4, 7 and 8."
+    "# Add a new column to our table that holds the cluster label kmeans assigned.\n",
+    "columns_and_labels = columns.with_column('cluster_id', kmeans.labels_.tolist())"
    ]
   },
   {
@@ -196,7 +224,34 @@
    },
    "outputs": [],
    "source": [
-    "# Answer here:\n"
+    "# Get genes that were clustered into cluster 0. Drop the cluster column for plotting.\n",
+    "cluster_0 = columns_and_labels.where('cluster_id', 0).drop('cluster_id')\n",
+    "\n",
+    "# Graphing a line for each gene is tricky. To do this, we will be converting our data to a matrix, \n",
+    "# then using matplotlib. 'T' transposes our data.\n",
+    "x=cluster_0.to_df().as_matrix().T\n",
+    "\n",
+    "# Plot each gene using matplotlib.\n",
+    "matplotlib.pyplot.plot(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 4\n",
+    "Following the instrunctions from the cell above, plot and save clusters 2, 4, 7 and 8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Answer here:"
    ]
   },
   {
@@ -209,12 +264,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer here:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
     "## Question 6\n",
     "What may be some factors that differentiate specific genes from one another?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer here:"
    ]
   },
   {
@@ -232,13 +301,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Bonus Problem 1\n",
+    "\n",
+    "Look at some of the clusters and the genes in each cluster. Can you find any genes in cluster 0 that may have synergystic roles? (Hint: This will require you to join Gene Symbols with cluster ids.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer here:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Problem 2\n",
+    "\n",
+    "Read over https://www.immgen.org/ImmGenPublications/ni.2536.pdf. Specifically, take a look at Figure 1c. These clusters in Figure 1c may be similar the the clusters we created above. What are the cluster categories the paper groups genes into? Can you guess which, if any, clusters we generated match with the clusters from the paper?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer here:"
+   ]
   }
  ],
  "metadata": {
