added changes for lab 2

--- a/notebooks/Lab2.ipynb
+++ b/notebooks/Lab2.ipynb
@@ -51,6 +51,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### What do the table headers mean?\n",
+    "For each gene, we are given a gene symbol and description. Other values include fold change (FC) and mean expression. We will discuss mean expression in part 2. \n",
+    "\n",
+    "A description of fold change: https://en.wikipedia.org/wiki/Fold_change\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The data loaded in shows 1000 genes and their mean expression after 6 days of incubation. This expression value is shown in the column labeled 'mean_6d'. \n",
     "\n",
     "First, let's sort the genes by expression. First, we will sort in order of descending expression to find the 3 highest expressed genes."
@@ -121,14 +131,19 @@
    "metadata": {},
    "source": [
     "## Question 3\n",
-    "Plot the naive and 6 day expressions, with naive (mean_naive) on the x axis and 6 day (mean_6d). What does this plot tell you about relative expression after 6 days of incubation?"
+    "A. Plot the naive and 6 day expressions, with naive (mean_naive) on the x axis and 6 day (mean_6d). \n",
+    "\n",
+    "\n",
+    "B. What does this plot tell you about relative expression after 6 days of incubation?\n",
+    "\n",
+    "**Answer here:**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -171,6 +186,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### What do the table headers mean?\n",
+    "In this table, 'mean_n' indicates mean gene expression for naive cells. 'mean_12h' indicates mean expression after 12 hours, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Fit 10 clusters to the 42 genes available in immgen_timeseries.csv. You first must convert the dataframe into an np matrix. To do so, select relevant columns, then call `table.to_df().as_matrix()`."
    ]
   },
@@ -178,7 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -266,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here:"
+    "**Answer here:**"
    ]
   },
   {
@@ -283,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here:"
+    "**Answer here:**"
    ]
   },
   {
@@ -315,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here:"
+    "**Answer here:**"
    ]
   },
   {
@@ -331,8 +354,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here:"
+    "**Answer here:**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
