--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# load in data for part 1\n",
-    "table = Table.read_table('../data/lab3/p53_sequences.csv')\n",
+    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab3/p53_sequences.csv')\n",
     "table"
    ]
   },
@@ -105,13 +105,69 @@
    },
    "outputs": [],
    "source": [
+    "# function that calculates the distance between 2 strings s1 and s2\n",
     "def hammingDistance(s1, s2):\n",
     "    '''For two strings s1 and s2, output the number of position that they differ in.\n",
     "    Strings s1 and s2 must be the same length.'''\n",
     "    if len(s1)!=len(s2):\n",
     "        return('The input strings are not of the same length.')\n",
     "    else:\n",
-    "        return(sum([i!=j for i,j in zip(s1, s2)]))"
+    "        return(sum([i!=j for i,j in zip(s1, s2)]))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This next function, called visualizeHammingDistance(), visualizes the locations of the differences between two strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# function that visualizes the differences between two strings s1 and s2\n",
+    "def visualizeHammingDistance(expected, actual):\n",
+    "    if len(expected)!=len(actual):\n",
+    "        return('The input strings are not of the same length.')\n",
+    "    diff = list('-') * len(expected)\n",
+    "    \n",
+    "    # convert strings to lists of chars\n",
+    "    expectedArray = list(expected)\n",
+    "    actualArray = list(actual)\n",
+    "    \n",
+    "    # zip lists together\n",
+    "    zipped = zip(expectedArray, actualArray)\n",
+    "    \n",
+    "    # for each char, if different, add to list of characters\n",
+    "    for i, n in enumerate(zipped):\n",
+    "        if n[0]!=n[1]: \n",
+    "            diff[i]=n[1]\n",
+    "    \n",
+    "    return ''.join(diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the 'Hello, Dolly!', we will calculate the hamming distance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hammingDistance('Hello, Dolly!','Help-, Dolly!')"
    ]
   },
   {
@@ -119,7 +175,7 @@
    "metadata": {},
    "source": [
     "## Question 2\n",
-    "Make sure that you get the same distance from the strings in **Q1** using the hammingDistance function."
+    "Make sure that you get the same distance from the strings in **Question 1** using the hammingDistance() function."
    ]
   },
   {
@@ -131,6 +187,27 @@
    "outputs": [],
    "source": [
     "# Answer: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3\n",
+    "\n",
+    "Using the visualizeHammingDistance() function, visualize the difference in the two DNA sequences from **Question 1**.\n",
+    "Does the output change if you switch the order of inputs in the function?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Answer:"
    ]
   },
   {
@@ -151,24 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3\n",
-    "Lookup p53 online and list some of the traits and functions of p53. Start here for a resource:  https://en.wikipedia.org/wiki/TP53."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:\n",
-    "p53 is a tumor supressor protein. p53 can initiate apoptosis, hold cell production at G1 phase to allow for damage DNA to be repaired, and can initiate DNA repair proteins."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Question 4\n",
-    "Given the sequence descriptions in the table, what are the two main types of mutations we can see in these seqeunces?"
+    "Lookup p53 online and list some of the traits and functions of p53. Start here for a resource:  https://en.wikipedia.org/wiki/TP53."
    ]
   },
   {
@@ -183,7 +244,7 @@
    "metadata": {},
    "source": [
     "## Question 5\n",
-    "Search for these mutations. What are the difference between these two mutations?"
+    "Given the sequence descriptions in the table, what are the two main types of mutations we can see in these sequences?"
    ]
   },
   {
@@ -198,6 +259,21 @@
    "metadata": {},
    "source": [
     "## Question 6\n",
+    "Search for these mutations listed in the table descriptions. What are the difference between these two mutations?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7\n",
     "Calculate the hamming distance for all pairs of sequences in the table. There"
    ]
   },
@@ -216,8 +292,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 7 (Optional)\n",
-    "Modify the hamming distance function and print the locations of where the sequences differ. What spots differ the most across sequences? Can you identify the location of  R273h and T284r mutations?"
+    "## Question 8\n",
+    "A. Using the visualize visualizeHammingDistance() function, visualize the difference between all pairs of sequences in the table and print out the results. \n",
+    "\n",
+    "B. From these comparisons, can you pinpoint the location of the mutations discovered in **Question 5**?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# A. Answer: sequence comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "B. Answer: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 9 \n",
+    "On a scale from 1 to 10 (1 being worst, 10 being best), please rate this lab in terms of its:\n",
+    "1. Clarity\n",
+    "2. Difficulty\n",
+    "3. Length\n",
+    "4. Insight"
    ]
   },
   {
