fixed explanation in lab 3

--- a/notebooks/Lab3.ipynb
+++ b/notebooks/Lab3.ipynb
@@ -274,7 +274,7 @@
    "metadata": {},
    "source": [
     "## Question 7\n",
-    "Calculate the hamming distance for all pairs of sequences in the table. There"
+    "Calculate the hamming distance for all pairs of sequences in the table. There are 6 total comparisons."
    ]
   },
   {
@@ -293,7 +293,7 @@
    "metadata": {},
    "source": [
     "## Question 8\n",
-    "A. Using the visualize visualizeHammingDistance() function, visualize the difference between all pairs of sequences in the table and print out the results. \n",
+    "A. Using the visualize visualizeHammingDistance() function, visualize the difference between all pairs of sequences in the table and print out the results. There are 6 total comparisons.\n",
     "\n",
     "B. From these comparisons, can you pinpoint the location of the mutations discovered in **Question 5**?"
    ]
