made adjustments to lab 4

--- a/notebooks/Lab4.ipynb
+++ b/notebooks/Lab4.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lab 4: Polymorphisms and Mutations"
+    "# Lab 4: Polymorphisms and Mutations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For lab 4, we will be comparing the polymorphisms in two genes, HLA-A and H2A. Part 1 of the lab will involve following a tutorial using the UCSC Genome Browser. Part 2 of the lab will include an ipython lab."
+    "For lab 4, we will be comparing polymorphisms in two genes, HLA-A and H2A. Part 1 of the lab will involve following a tutorial using the UCSC Genome Browser. Part 2 of the lab will include an ipython lab."
    ]
   },
   {
@@ -68,7 +68,9 @@
     "\n",
     "5.\n",
     "\n",
-    "6.\n"
+    "6.\n",
+    "\n",
+    "7.\n"
    ]
   },
   {
@@ -76,9 +78,7 @@
    "metadata": {},
    "source": [
     "##### Questions: HLA-A SNP Density\n",
-    "1.\n",
-    "\n",
-    "2.\n"
+    "1."
    ]
   },
   {
@@ -108,9 +108,7 @@
     "\n",
     "4.\n",
     "\n",
-    "5.\n",
-    "\n",
-    "6.\n"
+    "5.\n"
    ]
   },
   {
@@ -127,64 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2: Sequence Comparison\n",
-    "\n",
-    "For part 2 of this lab, we will be taking some example sequences of HLA-A and taking a closer look at where insertions, deletions and mismatches occur."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# load in sequence data for HLA-A\n",
-    "# load in data for part 1\n",
-    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab4/hla-a.csv')\n",
-    "table\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 1\n",
-    "What are the lengths of the sequences loaded for HLA-A? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "## Answer: \n",
-    "\n",
-    "# here are the sequences\n",
-    "seq1 = table.rows[0].Sequence\n",
-    "seq2 = table.rows[1].Sequence\n",
-    "seq3 = table.rows[2].Sequence\n",
-    "\n",
-    "## Now print sequence lengths\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Question 2\n",
-    "Why might the lengths of these sequences differ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
+    "# Part 2: Multiple Sequence Alignment of HLA-A sequences"
    ]
   },
   {
@@ -200,9 +141,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3\n",
+    "## Question 1\n",
     "\n",
     "Why might a multiple sequence alignment (MSA) algorithm be used instead of a sequence alignment algorithm that just aligns two sequences?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer here:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 2\n",
+    "\n",
+    "Take a look at the T-coffee website (http://tcoffee.vital-it.ch/apps/tcoffee/references.html) and give a summary about what their algorithm does.\n"
    ]
   },
   {
@@ -221,9 +178,9 @@
    "outputs": [],
    "source": [
     "# load in sequence data for HLA-A\n",
-    "# load in data for part 1\n",
+    "# load in data\n",
     "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab4/hla-a_msa.csv')\n",
-    "table2\n"
+    "table\n"
    ]
   },
   {
@@ -276,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5\n",
+    "### Question 3\n",
     "Fill in the blanks below to plot the difference vector across the three HLA-A sequences."
    ]
   },
@@ -324,7 +281,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus Question\n",
+    "# Part 3: Extra for Experts\n",
+    "This section is optional. However, it is highly encouraged if you are comfortable with python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Question 1\n",
     "\n",
     "Choose a SNP overlapping HLA-A from the UCSC Genome Browser (This can be the same SNP you chose in part 1 of the lab.)\n",
     "Does this SNP appear in any of the sequences above? How can you verify this?"
