added images folder

--- a/exercises/lab5/lab5.ipynb
+++ b/exercises/lab5/lab5.ipynb
@@ -112,7 +112,7 @@
     "1. Navigate to [Allele Frequencies](http://www.iedb.org/).\n",
     "2. We will use this portal to explore HLA-A frequencies. In the sidebar menu, hover above **HLA** and click on **HLA Allele Freq (Classical)**.\n",
     "2. In the resulting search page, under locus, select **locus A**.\n",
-    "<img src=\"../images/lab5/locus.png\" width=\"100\" />\n",
+    "<img src=\"images/locus.png\" width=\"100\" />\n",
     "3. In the population dropdown menu, select any country or region of interest (e.g. Albania). **Note**: Some countries do not contain information for HLA-A. If you get an error, choose a different country or region.\n",
     "4. Click **Search**.\n",
     "5. The resulting search results will tell you the different alleles for HLA-A and their frequencies in that population."
@@ -175,7 +175,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"../images/lab5/distribution.png\" width=\"75\" />"
+    "<img src=\"images/distribution.png\" width=\"75\" />"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "1. Click the back arrow to navigate from the map to your search results.\n",
     "2. Under the column labeled **IMGT/HLA Database**, click \"**see**\" next to the most frequent allele.\n",
     "\n",
-    "<img src=\"../images/lab5/imgtDB.png\" width=\"75\" />\n",
+    "<img src=\"images/imgtDB.png\" width=\"75\" />\n",
     "\n",
     "3. On the resulting page, click on the first allele. This will redirect you to a page of information for that allele.\n"
    ]
@@ -297,16 +297,16 @@
     "1. Navigate to [IEDB](http://www.iedb.org/)\n",
     "2. On the resulting page, in the right sidebar, there is a box labeled **T cell Epitope Prediction**. In this box, click on **MHC I Binding**.\n",
     "\n",
-    "<img src=\"../images/lab5/tcellepitopeSidebar.png\" width=\"150\" />\n",
+    "<img src=\"images/tcellepitopeSidebar.png\" width=\"150\" />\n",
     "\n",
     "This will redirect you to a new page where you can upload sequences and predict the binding affinity of multiple HLA alleles to that sequence. This\n",
     "page allows you to predict on self-selected alleles or predicted on a reference set of alleles. First, we will explore a pre-curated reference set of alleles.\n",
     "\n",
-    "<img src=\"../images/lab5/predictionInterface.png\" width=\"300\" />\n",
+    "<img src=\"images/predictionInterface.png\" width=\"300\" />\n",
     "\n",
     "In the section labeled **Specify what to make binding predictions for**, click on the link labeled **Select HLA allele reference set**.\n",
     "\n",
-    "<img src=\"../images/lab5/navigaterefset.png\" width=\"400\"/>"
+    "<img src=\"images/navigaterefset.png\" width=\"400\"/>"
    ]
   },
   {
@@ -398,7 +398,7 @@
     "editable": true
    },
    "source": [
-    "<img src=\"../images/lab5/hlarefset.png\" width=\"400\" />"
+    "<img src=\"images/hlarefset.png\" width=\"400\" />"
    ]
   },
   {
@@ -421,7 +421,7 @@
     "# Part 2: Prediction Methods for MHC Class I Molecules\n",
     "In part 2 of the lab, we will investigate the types of methods used to predict binding affinity of sequences to MHC class I molecules.\n",
     "1. On the MHC-I Binding Predictions page, click on **Help on prediction method selections** under the section labeled **Choose a Prediction Method**\n",
-    "<img src=\"../images/lab5/choosePredictionMethod.png\" />\n",
+    "<img src=\"images/choosePredictionMethod.png\" />\n",
     "\n",
     "2. On the resulting page, you will see a description for **Choose a prediction method**. Read the explanation and answer the following questions."
    ]
@@ -625,11 +625,11 @@
     "\n",
     "1. Navigate back to the MHC_I Binding Prediction page: [MHC 1 Binding][5]\n",
     "3. Under the section called **Specify Sequence(s)**, enter in the epitopes provided in the table above:\n",
-    "<img src=\"../images/lab5/enterEpitopes.png\" />\n",
+    "<img src=\"images/enterEpitopes.png\" />\n",
     "\n",
     "2. Under the section called **Specify what to make binding predictions for**, upload your reference allele set downloaded in part 2. **Important**: Before uploading the reference allele set, be sure to open the file, and\n",
     "remove all HLA-B alleles. Only include HLA-A alleles.\n",
-    "<img src=\"../images/lab5/uploadAlleles.png\" />\n",
+    "<img src=\"images/uploadAlleles.png\" />\n",
     "\n",
     "3. Click **Submit**.\n",
     "4. Wait. This may take a couple minutes...\n",
