fixed broken link in lab 5

--- a/exercises/lab5/lab5.ipynb
+++ b/exercises/lab5/lab5.ipynb
@@ -27,7 +27,7 @@
     "editable": true
    },
    "source": [
-    "## Part 0: Fundamental Concepts\n",
+    "# Part 0: Fundamental Concepts\n",
     "These questions include fundamental concepts crucial to understanding this lab. Answer the following questions."
    ]
   },
@@ -98,7 +98,7 @@
     "editable": true
    },
    "source": [
-    "## Part 1: Understanding HLA-A and its Alleles"
+    "# Part 1: Understanding HLA-A and its Alleles"
    ]
   },
   {
@@ -109,7 +109,7 @@
    },
    "source": [
     "For part 1 of this lab, we will research different HLA-A allele frequencies in a specific population of interest.\n",
-    "1. Navigate to [Allele Frequencies](http://www.iedb.org/).\n",
+    "1. Navigate to [Allele Frequencies](http://www.allelefrequencies.net/).\n",
     "2. We will use this portal to explore HLA-A frequencies. In the sidebar menu, hover above **HLA** and click on **HLA Allele Freq (Classical)**.\n",
     "2. In the resulting search page, under locus, select **locus A**.\n",
     "<img src=\"images/locus.png\" width=\"100\" />\n",
@@ -155,7 +155,7 @@
     "editable": true
    },
    "source": [
-    "**Question 2** Click on the Distribution map of the most frequent allele for your chosen population. This should redirect you to a global map and the locations of your chosen allele."
+    "1. Click on the Distribution map of the most frequent allele for your chosen population. This should redirect you to a global map and the locations of your chosen allele."
    ]
   },
   {
@@ -185,7 +185,7 @@
     "editable": true
    },
    "source": [
-    "**Q3a** Is this allele geographically concentrated or spread out?"
+    "**Q2a** Is this allele geographically concentrated or spread out?"
    ]
   },
   {
@@ -205,7 +205,7 @@
     "editable": true
    },
    "source": [
-    "**Q3b** In which regions is this allele the most concentrated?"
+    "**Q2b** In which regions is this allele the most concentrated?"
    ]
   },
   {
@@ -225,7 +225,7 @@
     "editable": true
    },
    "source": [
-    "**Q3c** Can you think of potential explanations for the distribution of this allele? (e.g. If it is spread out\n",
+    "**Q2c** Can you think of potential explanations for the distribution of this allele? (e.g. If it is spread out\n",
     "  around the globe, what could have caused this spread? If it is concentrated in a couple areas, what factors would concentrate this allele?)"
    ]
   },
@@ -291,7 +291,7 @@
     "editable": true
    },
    "source": [
-    "## Part 2: Designing a Reference Allele Set\n",
+    "# Part 2: Designing a Reference Allele Set\n",
     "As we will see in part 2 of this lab, IEDB provides us with a set of reference alleles that cover a large portion of the population.\n",
     "\n",
     "1. Navigate to [IEDB](http://www.iedb.org/)\n",
@@ -418,7 +418,7 @@
     "editable": true
    },
    "source": [
-    "# Part 2: Prediction Methods for MHC Class I Molecules\n",
+    "# Part 3: Prediction Methods for MHC Class I Molecules\n",
     "In part 2 of the lab, we will investigate the types of methods used to predict binding affinity of sequences to MHC class I molecules.\n",
     "1. On the MHC-I Binding Predictions page, click on **Help on prediction method selections** under the section labeled **Choose a Prediction Method**\n",
     "<img src=\"images/choosePredictionMethod.png\" />\n",
@@ -503,7 +503,7 @@
     "editable": true
    },
    "source": [
-    "## Part 3: Prediction of Sequences"
+    "# Part 4: Prediction of Sequences"
    ]
   },
   {
