--- a/exercises/lab5/lab5.ipynb
+++ b/exercises/lab5/lab5.ipynb
@@ -135,7 +135,7 @@
     "editable": true
    },
    "source": [
-    "**Question 1** What is the name of the most frequent allele in the population you chose?"
+    "**Question 1 What is the name of the most frequent allele in the population you chose? **"
    ]
   },
   {
@@ -156,16 +156,6 @@
    },
    "source": [
     "1. Click on the Distribution map of the most frequent allele for your chosen population. This should redirect you to a global map and the locations of your chosen allele."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "(Write your answer here)"
    ]
   },
   {
@@ -261,17 +251,7 @@
     "editable": true
    },
    "source": [
-    "### Question: Most Frequent Allele"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "**What is the protein sequence for this allele?**"
+    "**Q3 What is the protein sequence for this allele?** "
    ]
   },
   {
