fixed broken data link

--- a/notebooks/Lab6.ipynb
+++ b/notebooks/Lab6.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# load in data for part 2\n",
-    "table = Table.read_table('../data/immgen_timeseries.csv')\n",
+    "table = Table.read_table('https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab2/immgen_timeseries.csv')\n",
     "\n",
     "# Show the table\n",
     "table"
