--- a/notebooks/Lab6.ipynb
+++ b/notebooks/Lab6.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -35,8 +35,6 @@
     "# imports\n",
     "from datascience import Table\n",
     "import matplotlib\n",
-    "matplotlib.use('Agg')\n",
-    "from datascience import Table\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -60,9 +58,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -89,17 +85,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "## filter by category\n",
     "\n",
     "## example: filtered category for naive and late memory cells\n",
-    "table.where('Category', 'Naive/late memory')\n",
-    "\n"
+    "table.where('Category', 'Naive/late memory')"
    ]
   },
   {
@@ -128,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -153,13 +146,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
+   "outputs": [],
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "# You will need to use code to answer this question\n"
    ]
   },
   {
@@ -184,13 +180,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run any code you want to for this question\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -201,6 +210,19 @@
    },
    "source": [
     "<div style=\"color:red\">** Question 4**:</div> In the table of effector response genes, for what genes are values missing? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Run any code you want to for this question\n"
    ]
   },
   {
@@ -228,9 +250,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -255,9 +275,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -290,9 +308,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -326,20 +342,18 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">** Question 5**:</div> Plot the imputed data."
+    "<div style=\"color:red\">** Question 5**:</div> Plot the imputed data. *Hint:* Look at how we plotted the data in one of previous cells."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "## Answer here:"
+    "## Answer here:\n"
    ]
   },
   {
@@ -369,7 +383,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -389,7 +403,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -431,7 +445,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -451,7 +465,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -488,7 +502,7 @@
    "source": [
     "The genes you wrote down as an answer to **Question  9** should appear in this network. Click on the first gene.\n",
     "\n",
-    "<div style=\"color:red\">** Question 10**:</div> What is the name and function of the first gene? What two molecules does it bind to?"
+    "<div style=\"color:red\">** Question 10**:</div> What is the name and function of the **first** gene? What two molecules does it bind to?"
    ]
   },
   {
@@ -498,7 +512,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -508,7 +522,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">** Question 11**:</div>What is the name and function of the first gene? What two molecules does it bind to?"
+    "<div style=\"color:red\">** Question 11**:</div>What is the name and function of the **second** gene? What two molecules does it bind to?"
    ]
   },
   {
@@ -519,7 +533,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -540,7 +554,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -560,7 +574,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -603,7 +617,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -625,7 +639,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -661,7 +675,7 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
   },
   {
@@ -686,19 +700,8 @@
     "editable": true
    },
    "source": [
-    "<div style=\"color:red\">Answer here:</div>"
+    "<div style=\"color:red\">Answer here:</div>\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
