updated data link

--- a/notebooks/Lab9.ipynb
+++ b/notebooks/Lab9.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "\n",
     "# load in data for part 1\n",
-    "patients = Table.read_table(\"../../MCB88/mcb-88-connector/data/lab9/TableS2.Clinical_and_genome_characteristics_each_patient.csv\")\n",
+    "patients = Table.read_table(\"https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab9/TableS2.Clinical_and_genome_characteristics_each_patient.csv\")\n",
     "\n",
     "patients"
    ]
