--- a/notebooks/Lab9.ipynb
+++ b/notebooks/Lab9.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -54,13 +54,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "\n",
     "# load in data for part 1\n",
     "patients = Table.read_table(\"https://raw.githubusercontent.com/data-8/mcb-88-connector/gh-pages/data/lab9/TableS2.Clinical_and_genome_characteristics_each_patient.csv\")\n",
     "\n",
@@ -88,12 +87,14 @@
    },
    "source": [
     "<h2 style=\"color:red\">** Question 1**:</h2> \n",
-    "Plot the overall survival of patients against progression free survival of patients in a scatter plot. (Reference http://data8.org/datascience/tutorial.html#getting-started if you are unsure of how to make a scatter plot.) In this plot, you should plot the columns 'overall_survival' against 'progression_free'. Make sure to specify 'overall_survival' on the x-axis."
+    "Plot the overall survival of patients against progression free survival of patients in a scatter plot. (Reference http://data8.org/datascience/tutorial.html#getting-started if you are unsure of how to make a scatter plot.) In this plot, you should plot the columns 'overall_survival' against 'progression_free'. Make sure to specify 'overall_survival' on the x-axis.\n",
+    "\n",
+    "*Hint*: Try selecting the required columns first"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -191,7 +192,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -220,7 +221,9 @@
    "source": [
     "<h2 style=\"color:red\">** Question 3**:</h2> \n",
     "Filter the patients in the long-term survival with no clinical benefit category The criteria for filtering are listed above, and is as follows:\n",
-    "overall_survival > 2 years and progression free survival < 6 months (say average month is 30 days)."
+    "overall_survival > 2 years and progression free survival < 6 months (say average month is 30 days).\n",
+    "\n",
+    "*Hint* : Look at how we filtered the dataframe in the previous cell."
    ]
   },
   {
@@ -307,7 +310,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -404,7 +407,9 @@
    },
    "source": [
     "<h2 style=\"color:red\">** Question 8**:</h2> \n",
-    "Make a box plot that displays the counts of the neoantigens predicted to have the strongest binding affinity to their HLA molecules (found in the column neos500) for each cohort."
+    "Make a box plot that displays the counts of the neoantigens predicted to have the strongest binding affinity to their HLA molecules (found in the column neos500) for each cohort.\n",
+    "\n",
+    "Pandas DataFrame boxplot documentation: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.boxplot.html"
    ]
   },
   {
@@ -461,17 +466,6 @@
    "source": [
     "<div style=\"color:red\">**Answer here:**</div> "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
